src/app/globals.css
@import "tailwindcss";
@import "@heroui/styles";

@theme inline {
    --font-sans: var(--font-sans-var);
    --font-mono: var(--font-mono-var);

    --height-app-wrapper: calc(100dvh - 1rem);
}

@utility app-shadow-hard-md {
    box-shadow: 4px 4px 0 var(--foreground);
}

@utility app-shadow-hard-sm {
    box-shadow: 2px 2px 0 var(--foreground);
}

:root {
    --accent: #f4db5c;
    --accent-foreground: #000000;
    accent-color: var(--accent);
}

::selection {
    background-color: var(--accent);
    color: var(--accent-foreground);
}

.dark {
    --accent: #f4db5c;
    --accent-foreground: #000000;
    --background-tertiary: #21201f;
}

/* Scrollbar */
::-webkit-scrollbar {
    width: 10px;
    height: 10px;
}

::-webkit-scrollbar-track {
    background: var(--color-background);
    border-radius: 5px;
}

::-webkit-scrollbar-thumb {
    background: var(--color-muted);
    border-radius: 5px;
    border: 2px solid var(--color-background);
}

::-webkit-scrollbar-thumb:hover {
    /* Hardcoded against convention, but works surprisingly well in both light and dark theme */
    background: #555;
}

@layer base {
    html,
    body {
        height: 100%;
    }

    body {
        @apply bg-background text-foreground font-sans;
        overflow: hidden;
    }

    input,
    button,
    select,
    textarea {
        font-family: inherit;
    }
}

@layer components {
    .button {
        @apply rounded-lg;
    }

    .button--primary {
        @apply border-foreground border;
        @apply dark:border-background;
    }

    .button--outline {
        @apply border-foreground;
    }

    .input {
        @apply border-foreground rounded-lg border shadow-none transition-colors;
    }

    .input:hover:not(:focus):not(:focus-visible) {
        @apply border-foreground rounded-lg border;
    }

    .input:focus,
    .input[data-focused="true"] {
        @apply border-accent focus-visible:ring-0 focus-visible:outline-none;
    }

    .modal__dialog {
        @apply border-foreground app-shadow-hard-md rounded-2xl border px-0 py-4;
    }

    .modal__header {
        @apply px-7;
    }

    .modal__body {
        @apply flex max-h-[calc(var(--visual-viewport-height,100svh)-10rem)] flex-col gap-4 px-8;
    }

    .modal__body + .modal__footer {
        @apply mt-0 px-6 pt-2;
    }

    .modal__close-trigger {
        @apply bg-transparent;
    }

    .modal__close-trigger:hover {
        @apply bg-default;
    }

    .dropdown__popover {
        @apply border-foreground app-shadow-hard-sm rounded-lg border;
    }

    .menu-item {
        @apply rounded-sm;
    }

    .menu-item:has(.menu-item__indicator) {
        @apply ps-8;
    }

    .menu-item__indicator {
        @apply text-foreground;
    }

    .popover {
        @apply rounded-lg;
    }

    .popover {
        @apply border-foreground app-shadow-hard-sm border;
    }

    .popover__dialog {
        @apply p-2;
    }

    .checkbox__control {
        @apply border-border-secondary border;
    }

    .tabs__list {
        @apply border-foreground bg-background app-shadow-hard-sm rounded-xl border;
    }

    .tabs__tab[data-selected="true"] {
        @apply text-foreground;
        @apply dark:text-background;
    }

    .tabs__tab:not([data-selected="true"]):not([data-disabled="true"]):hover {
        @apply text-foreground opacity-100;
    }

    .tabs__indicator {
        @apply bg-accent text-foreground rounded-lg;
    }
}

@media (prefers-reduced-motion: reduce) {
    *,
    *::before,
    *::after {
        animation-duration: 0.01ms;
        animation-iteration-count: 1;
        transition-duration: 0.01ms;
    }
}

